org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/failing/SameNamesImport.alf.xt
//This test is failing.  The errors generated by the original junit test is "Couldn't resolve reference to Class 'B'."
//Test with junit or junit plugin-test results in the different error.
/* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.SysMLValidationTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
		File "SamePackageName_A.alf" {}
		File "SamePackageName_B.alf" {}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
				File "SamePackageName_A.alf" {}
				File "SamePackageName_B.alf" {}
			}
		}
	}
END_SETUP 
*/

package test{
	import SamePackage::container::*;
	//to pass junit-plugin test
	//XPECT errors --> "Couldn't resolve reference to Class 'A'." at "A"
	class something1 specializes A{}
	//pass junit test
	//"Couldn't resolve reference to Class 'B'." at "B"
	class something2 specializes B{}
}

